fix gap bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+.fix-gap {
+  gap: 0.5rem; /* ou 8px */
+}
+
